fixes various spacing issues

--- a/rulesets/output/economics.css
+++ b/rulesets/output/economics.css
@@ -986,7 +986,7 @@
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(table);
+  content: counter(chapter) "." counter(table) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered) caption {
@@ -1015,7 +1015,7 @@
   move-to: bCaption; }
 :pass(6) .appendix :not(table) > table:not(.unnumbered)::before {
   container: span;
-  content: counter(appendix,upper-alpha) "." counter(table);
+  content: counter(appendix,upper-alpha) "." counter(table) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) .appendix :not(table) > table:not(.unnumbered) caption {
@@ -1044,7 +1044,7 @@
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(figure);
+  content: counter(chapter) "." counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered) figcaption {
@@ -1073,7 +1073,7 @@
   move-to: bCaption; }
 :pass(6) .appendix :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(appendix,upper-alpha) "." counter(figure);
+  content: counter(appendix,upper-alpha) "." counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) .appendix :not(figure) > figure:not(.unnumbered) figcaption {
